serves staticfiles now + index.html

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ dj-database-url = "*"
 psycopg2-binary = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+whitenoise = "*"
 
 [dev-packages]
 
